# Projects

./: .env.example  .gitignore  .pre-commit-config.yaml  ETHICS.md  LICENSE  Makefile  README.md  SECURITY.md
00-foundations/certpath/: Makefile  README.md  certpath.md  conftest.py  pyproject.toml  requirements.txt  syllabus.json
00-foundations/certpath/data/: README.md
00-foundations/certpath/models/: README.md
00-foundations/certpath/results/: metrics.json
00-foundations/certpath/scripts/: cert_coverage.py
00-foundations/certpath/tests/: test_smoke.py
00-foundations/module-1-attack-atlas/: Makefile  README.md  pyproject.toml  requirements.txt
00-foundations/module-1-attack-atlas/data/: README.md
00-foundations/module-1-attack-atlas/models/: README.md
00-foundations/module-1-attack-atlas/navigator/: portfolio_layer.json
00-foundations/module-1-attack-atlas/results/: atlas_map.json  metrics.json
00-foundations/module-1-attack-atlas/scripts/: build_atlas_map.py  build_navigator_layer.py
00-foundations/module-1-attack-atlas/tests/: conftest.py  test_smoke.py
00-foundations/module-2-stride-ml/: Makefile  README.md  pyproject.toml  requirements.txt
00-foundations/module-2-stride-ml/data/: README.md
00-foundations/module-2-stride-ml/docs/: threat-model.md
00-foundations/module-2-stride-ml/models/: README.md
00-foundations/module-2-stride-ml/results/: metrics.json
00-foundations/module-2-stride-ml/scripts/: threatmodel.py
00-foundations/module-2-stride-ml/tests/: conftest.py  test_smoke.py
00-foundations/module-3-network-labs/: Makefile  README.md  pyproject.toml  requirements.txt
00-foundations/module-3-network-labs/data/: README.md
00-foundations/module-3-network-labs/models/: README.md
00-foundations/module-3-network-labs/results/: metrics.json
00-foundations/module-3-network-labs/scripts/: analyze.py  make_pcap.py
00-foundations/module-3-network-labs/tests/: conftest.py  test_smoke.py
00-foundations/module-4-web-appsec/: Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
00-foundations/module-4-web-appsec/data/: README.md
00-foundations/module-4-web-appsec/models/: README.md
00-foundations/module-4-web-appsec/results/: findings.json  metrics.json
00-foundations/module-4-web-appsec/scripts/: run_lab.py
00-foundations/module-4-web-appsec/tests/: test_smoke.py
00-foundations/module-5-crypto-lab/: Makefile  README.md  pyproject.toml  requirements.txt
00-foundations/module-5-crypto-lab/data/: README.md
00-foundations/module-5-crypto-lab/models/: README.md
00-foundations/module-5-crypto-lab/results/: metrics.json
00-foundations/module-5-crypto-lab/scripts/: run_crypto_lab.py
00-foundations/module-5-crypto-lab/tests/: test_smoke.py
01-detection-engineering/CAPSTONE-adversarial-ids/: Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
01-detection-engineering/CAPSTONE-adversarial-ids/data/: README.md
01-detection-engineering/CAPSTONE-adversarial-ids/models/: README.md
01-detection-engineering/CAPSTONE-adversarial-ids/results/: metrics.json  report_card.md
01-detection-engineering/CAPSTONE-adversarial-ids/scripts/: run_capstone.py
01-detection-engineering/CAPSTONE-adversarial-ids/tests/: test_smoke.py
01-detection-engineering/p1-nids-baseline/: Makefile  README.md  pyproject.toml  requirements.txt
01-detection-engineering/p1-nids-baseline/data/: README.md
01-detection-engineering/p1-nids-baseline/models/: README.md
01-detection-engineering/p1-nids-baseline/results/: metrics.json
01-detection-engineering/p1-nids-baseline/scripts/: run_nids.py
01-detection-engineering/p1-nids-baseline/tests/: test_smoke.py
01-detection-engineering/p3-phishing-url/: Makefile  README.md  pyproject.toml  requirements.txt
01-detection-engineering/p3-phishing-url/data/: README.md
01-detection-engineering/p3-phishing-url/models/: README.md
01-detection-engineering/p3-phishing-url/results/: metrics.json
01-detection-engineering/p5-log-ueba/: Makefile  README.md  pyproject.toml  requirements.txt
01-detection-engineering/p6-threat-informed/: Makefile  README.md  pyproject.toml  requirements.txt
01-detection-engineering/p7-drift-monitoring/: Makefile  README.md  pyproject.toml  requirements.txt
02-adversarial-robustness/p2-attack-zoo/: Makefile  README.md  pyproject.toml  requirements.txt
02-adversarial-robustness/p3-pretrained-foolbox/: Makefile  README.md  pyproject.toml  requirements.txt
02-adversarial-robustness/p4-transfer-blackbox/: Makefile  README.md  pyproject.toml  requirements.txt
02-adversarial-robustness/p5-adv-input-detector/: Makefile  README.md  pyproject.toml  requirements.txt
02-adversarial-robustness/p6-adv-training/: Makefile  README.md  pyproject.toml  requirements.txt
02-adversarial-robustness/p7-randomized-smoothing/: Makefile  README.md  pyproject.toml  requirements.txt
03-ml-privacy/CAPSTONE-dp-defenses/: Makefile  README.md  pyproject.toml  requirements.txt
03-ml-privacy/p1-api-threat-model/: Makefile  README.md  pyproject.toml  requirements.txt
03-ml-privacy/p2-model-extraction/: Makefile  README.md  pyproject.toml  requirements.txt
03-ml-privacy/p3-membership-inference/: Makefile  README.md  pyproject.toml  requirements.txt
03-ml-privacy/p4-inversion-attribute/: Makefile  README.md  pyproject.toml  requirements.txt
03-ml-privacy/p5-llm-privacy/: Makefile  README.md  pyproject.toml  requirements.txt
04-llm-security/CAPSTONE-appsec-ci/: Makefile  README.md  ci-redteam.yml  pyproject.toml  requirements.txt
04-llm-security/p1-owasp-threat-lab/: AUTHORIZATION.md  Makefile  README.md  pyproject.toml  requirements.txt
04-llm-security/p2-garak-scan/: Makefile  README.md  pyproject.toml  requirements.txt
04-llm-security/p4-vulnerable-rag/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
04-llm-security/p5-attack-rag-pyrit/: Makefile  README.md  pyproject.toml  requirements.txt
04-llm-security/p6-agent-tool-abuse/: Makefile  README.md  pyproject.toml  requirements.txt
(+732 files in other folders)
