[project]
name = "attack-atlas"
version = "0.1.0"
description = "Map ml-security-portfolio tracks/projects to MITRE ATLAS and MITRE ATT&CK."
requires-python = ">=3.10"
# Stdlib only — the default build path needs nothing installed.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
markers = [
    "slow: runs the build scripts end-to-end; excluded from CI via -m 'not slow'",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
