[project]
name = "stride-ml"
version = "0.1.0"
description = "STRIDE threat model of an ML inference service (stdlib + optional pytm)."
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# optional enhanced path; the default run is stdlib-only.
pytm = ["pytm>=1.3"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
markers = [
    "slow: runs the full script end-to-end; excluded from CI via -m 'not slow'",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
