[project]
name = "juiceshop-lab"
version = "0.1.0"
description = "OWASP Top 10 break-and-fix lab against a local OWASP Juice Shop container."
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# OPTIONAL enhanced path: nicer HTTP ergonomics against the live container.
# The default path uses only stdlib urllib + matplotlib, so these are not required.
live = ["requests>=2.31"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
markers = [
    "slow: runs the end-to-end script / would hit a container; excluded from CI via -m 'not slow'",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
