[project]
name = "crypto-lab"
version = "0.1.0"
description = "Crypto basics + misuse demos: salted hashing, AES ECB-vs-GCM penguin, RSA, signatures."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# Enhanced path: real authenticated/padded primitives (lazy-imported).
enhanced = ["cryptography>=42", "pillow>=10"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
markers = [
    "slow: runs the full lab pipeline; excluded from CI via -m 'not slow'",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
