[project]
name = "adversarial-ids"
version = "0.1.0"
description = "CAPSTONE: constrained adversarial evasion + hardening of a tabular IDS (shared ids_pipeline)."
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# OPTIONAL enhanced path: craft the evasion with IBM ART instead of the
# hand-rolled FGSM. Imported lazily; the default offline path never needs it.
art = ["adversarial-robustness-toolbox==1.20.1"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
markers = [
    "slow: trains + attacks + hardens end-to-end; excluded from CI via -m 'not slow'",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
