[project]
name = "nids-baseline"
version = "0.1.0"
description = "Network intrusion detection baseline (SOC metrics) on the shared ids_pipeline library."
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# Optional enhanced path: gradient-boosted classifier instead of RandomForest.
boost = ["xgboost>=2.0"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
markers = [
    "slow: trains a model on more data; excluded from CI via -m 'not slow'",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
