[project]
name = "phishing-url"
version = "0.1.0"
description = "Phishing-URL detection: lexical features + sklearn classifier (char-CNN optional)."
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# enhanced paths: real PhiUSIIL data + the torch char-CNN
real = ["ucimlrepo>=0.0.7"]
cnn = ["torch>=2.2,<2.5"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
markers = [
    "slow: trains a model end-to-end; excluded from CI via -m 'not slow'",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
