[project]
name = "log-ueba"
version = "0.1.0"
description = "Auth-log anomaly detection / UEBA: synthetic events + IsolationForest, scored on precision@k and time-to-detect."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# torch is only needed for the optional autoencoder detector path.
torch = ["torch>=2.2,<2.5"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
markers = [
    "slow: runs the full generate->feature->detect pipeline; excluded from CI via -m 'not slow'",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
