[project]
name = "threat-informed"
version = "0.1.0"
description = "Detection-as-code: Sigma rules validated + mapped to ATT&CK with a coverage heatmap."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# PyYAML is OPTIONAL: the loader falls back to a built-in YAML-subset parser.
yaml = ["pyyaml>=6"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
markers = [
    "slow: end-to-end coverage build; excluded from CI via -m 'not slow'",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
