[project]
name = "attack-zoo"
version = "0.1.0"
description = "PGD, C&W-L2 and DeepFool evasion attacks implemented from scratch, compared on a small CNN."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2,<2.6",
    "torchvision>=0.17,<0.21",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# Optional enhanced path: a reference attack library to cross-check our scratch impls.
extra = ["torchattacks==3.5.1"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
markers = [
    "slow: trains a model / runs full attacks; excluded from CI via -m 'not slow'",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
