[project]
name = "pretrained-foolbox"
version = "0.1.0"
description = "Inference-time FGSM/PGD evasion on a pretrained model (foolbox optional)."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2,<2.5",
    "torchvision>=0.17,<0.20",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]
# OPTIONAL enhanced path: cross-check the hand-rolled attack with foolbox v3.
foolbox = ["foolbox>=3.3,<4"]

[tool.pytest.ini_options]
markers = [
    "slow: trains the offline target / heavier end-to-end; excluded from CI via -m 'not slow'",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
