[project]
name = "transfer-blackbox"
version = "0.1.0"
description = "Adversarial transferability + hand-rolled query-based black-box attacks (Square/Boundary) on small MNIST-style models."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2,<2.5",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# real-MNIST path (default path is synthetic + needs none of these)
real = ["torchvision>=0.17,<0.20"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
markers = [
    "slow: trains models / runs full study; excluded from CI via -m 'not slow'",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
