[project]
name = "adv-input-detector"
version = "0.1.0"
description = "Runtime adversarial-input detector: feature squeezing + a sklearn detector on clean vs FGSM."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2,<2.5",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# Optional enhanced path: real MNIST instead of the synthetic offline default.
mnist = ["torchvision>=0.17,<0.20"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
markers = [
    "slow: trains target + detector; excluded from CI via -m 'not slow'",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
