[project]
name = "adv-training"
version = "0.1.0"
description = "PGD adversarial training vs standard training — robustness curves on MNIST/synthetic."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2,<2.6",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# Optional enhanced path: real MNIST instead of the synthetic offline default.
real = ["torchvision>=0.17,<0.21"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
markers = [
    "slow: trains models; excluded from CI via -m 'not slow'",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
