[project]
name = "dp-defenses"
version = "0.1.0"
description = "Capstone: differential privacy (DP-SGD) vs membership inference + model extraction."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2,<2.5",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# OPTIONAL enhanced paths only. The default run needs none of these.
enhanced = [
    "opacus>=1.5",        # reference DP-SGD + accountant (validated against ours)
    "torchvision>=0.17",  # Fashion-MNIST tabular pool
]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
markers = [
    "slow: trains the full pipeline; excluded from CI via -m 'not slow'",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
