[project]
name = "api-threat-model"
version = "0.1.0"
description = "Hardened model-serving endpoint: API-key auth, token-bucket rate limiting, input validation, audit logging."
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# Optional enhanced transport (the default path uses the stdlib http.server).
serve = ["fastapi>=0.111,<1.0", "uvicorn>=0.30", "httpx>=0.27"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
markers = [
    "slow: spins up the optional FastAPI TestClient; excluded from CI via -m 'not slow'",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
