[project]
name = "model-extraction"
version = "0.1.0"
description = "Model stealing from scratch: train a thief on a victim API's labels; rate-limit defense."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2,<2.6",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]
mnist = ["torchvision>=0.17"]  # OPTIONAL real-data path

[tool.pytest.ini_options]
markers = [
    "slow: trains models end to end; excluded from CI via -m 'not slow'",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
