[project]
name = "lira-mia"
version = "0.1.0"
description = "Small online LiRA membership-inference attack on a self-trained model."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2,<2.6",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]
# OPTIONAL enhanced path: real Fashion-MNIST images instead of synthetic tabular data.
fashion = ["torchvision>=0.17,<0.21"]

[tool.pytest.ini_options]
markers = [
    "slow: trains target + shadow models; excluded from CI via -m 'not slow'",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
