[project]
name = "inversion-attribute"
version = "0.1.0"
description = "Model inversion (gradient ascent) + attribute inference on synthetic data."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2,<2.5",
    "torchvision>=0.17,<0.20",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
markers = [
    "slow: trains a model end-to-end; excluded from CI via -m 'not slow'",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
