[project]
name = "llm-privacy"
version = "0.1.0"
description = "Training-data memorization in LMs: canary insertion + Secret-Sharer exposure."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2,<2.5",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]
# OPTIONAL enhanced path: run the same exposure test against real GPT-2.
gpt2 = ["transformers>=4.40", "torch>=2.2"]

[tool.pytest.ini_options]
markers = [
    "slow: trains a model; excluded from CI via -m 'not slow'",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
