[project]
name = "owasp-threat-lab"
version = "0.1.0"
description = "OWASP LLM Top 10 (2025) mapping + reusable authorization template for the LLM-security track."
requires-python = ">=3.10"
dependencies = ["matplotlib>=3.7"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
markers = ["slow: excluded from CI via -m 'not slow'"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
