[project]
name = "garak-scan"
version = "0.1.0"
description = "Offline garak-style LLM red-team scan + report.jsonl parser (bootstrap-CI ASR)."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# OPTIONAL real-garak path: install garak and point it at YOUR OWN Ollama/API model.
real = ["garak>=0.15,<0.16"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
markers = [
    "slow: runs the full scan end-to-end; excluded from CI via -m 'not slow'",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
