[project]
name = "vulnerable-rag"
version = "0.1.0"
description = "A deliberately-vulnerable local RAG lab target (planted PII, leaky prompt, mock tool) for prompt-injection / exfiltration / defense projects."
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# Optional enhanced paths -- NOT needed for the default offline `make run`.
dense = ["sentence-transformers>=2.2"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
markers = [
    "slow: runs the full end-to-end attack-surface check; excluded from CI via -m 'not slow'",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
