[project]
name = "attack-rag-pyrit"
version = "0.1.0"
description = "Prompt-injection + data-exfiltration attacks vs the p4 lab RAG (offline; PyRIT optional)."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.2,<2.5",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# Optional REAL red-team path (needs your own API key / Ollama). See README.
real = ["pyrit-redteam>=0.14,<0.15"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
markers = ["slow: runs the full attack suite; excluded from CI via -m 'not slow'"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
